k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-crud
  namespace: laravel-crud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-crud
  template:
    metadata:
      labels:
       app: mysql-crud
    spec:
     containers:
        - name: mysql-container
          image: mysql:8
          ports: 
           - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql

     volumes:
       - name: mysql-storage
         persistentVolumeClaim:
             claimName: crud-pvc
