k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: laravel-crud
spec:
  selector:
    app: mysql-crud
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
