k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-service
  namespace: laravel-crud
spec:
  type: ClusterIP 
  selector:
    app: laravel-crud
  ports:
    - port: 80
      targetPort: 80
