k8s/crud-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
 name: crud-ingress
 namespace: laravel-crud
 annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service: 
             name: crud-service
             port:
              number: 80
